# branchspace

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  branchspace.json  compose.yml  mise.toml  opencode.json  pyproject.toml
.github/workflows/: python.yml
backlog/: config.yml
backlog/milestones/: m-0 - phase-1-core-infrastructure.md  m-1 - phase-2-worktree-commands.md  m-2 - phase-3-shell-integration.md  m-3 - phase-4-docker-features.md  m-4 - phase-5-polish-&-cross-platform.md  mvp.md
backlog/tasks/: task-001 - Configuration-System-with-Pydantic-Models.md  task-002 - Git-Utilities-Module.md  task-003 - Template-Variable-Engine.md  task-004 - Main-CLI-Scaffold-with-Click.md  task-005 - Rich-Console-Output-Utilities.md  task-006 - Implement-`branchspace-create`-Command.md  task-007 - Implement-`branchspace-ls`-Command.md  task-008 - Implement-`branchspace-cd`-Command.md  task-009 - Implement-`branchspace-rm`-Command.md  task-010 - Implement-`branchspace-config`-Command.md  task-011 - Implement-`branchspace-shell-integration`-Command.md  task-012 - Shell-Completion-Scripts.md  task-013 - Container-Config-Parser.md  task-014 - Implement-`branchspace-shell`-Command.md  task-015 - Implement-`branchspace-purge`-Command.md  task-016 - Implement-`branchspace-init`-Command.md  task-017 - Environment-Variable-Support.md  task-018 - Comprehensive-Error-Handling.md  task-019 - Cross-Platform-Testing.md  task-020 - Add-agents-command-for-AI-instruction-output.md  task-021 - Enhanced-Tab-Completion-for-CLI.md  task-022 - Add-Agent-Skill-installation-to-`branchspace-agents`-command.md
docs/implementation-plans/: branchspace-create.md  branchspace-rm.md
src/: shell-integration.sh
src/branchspace/: __init__.py  __main__.py  agents.py  completion.py  config.py  config_display.py  console.py  docker_purge.py  docker_shell.py  git_utils.py  init_config.py  main_cli.py  shell_integration.py  skill.py  template.py  worktree_cd.py  worktree_create.py  worktree_list.py  worktree_remove.py
tests/: __init__.py  test_agents.py  test_completion.py  test_config.py  test_config_display.py  test_console.py  test_docker_purge.py  test_docker_shell.py  test_git_utils.py  test_init_config.py  test_main_cli.py  test_shell_completion.py  test_shell_integration.py  test_skill.py  test_template.py  test_worktree_cd.py  test_worktree_create.py  test_worktree_list.py  test_worktree_remove.py
